style-all.css
body{
    color: white;
    height:100vh;
    width: 100vw;
    background-color: rgba(87, 87, 87, 0.788);
    overflow: hidden;
    /* margin: auto; */
    position:relative;
    max-width: 100%;
    max-height: 100%;
    padding: 5px;
    font-size: .5rem;
    background: url("./assets/images/BGs/PurpleMountains.jpg") no-repeat center center;
    margin: 0;
    padding: 0;
}
header{
    text-align: center;
    width: 100vw;
    height: 10%;
    background-color: rgba(127, 255, 212, 0.438);
    margin-top:2.5%;
}
.game-container{
    height: 93vh;
    width: 90vw;
    /* background-color: rgba(255, 127, 80, 0.788); */
    display:flex;
    flex-wrap: wrap;
    margin: auto;
} 
.stats-container{
    height: 10%;
    width: 100%;
    /* background-color: rgba(34, 139, 34, 0.801); */
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}
.stats-bubble{
   background-color: rgba(41, 12, 12, 0.568);
   width: 33.33%;
   text-align: center;
}
.info-container{
    width: 33.3%;
    height: 80%;
    /* background-color: greenyellow; */
    display: flex;
    flex-direction: column;
}
/* .square {
  width: 50%;
}

.square:after {
  content: "";
  display: block;
  padding-bottom: 100%;
} */
.image-square{
    width:100%;
    position:relative;
}
.image-square:after{
    content: "";
    display:block;
    padding-bottom: 100%;
    background-color: rgba(255, 255, 255, 0.356);
    border-radius: 18px;
}
.image-caption{
    position: absolute;
    color: black;
    bottom: 5%;
    left: 5%;
}
.info-div{
    background-color: rgba(41, 30, 41, 0.452);
    flex: 1 1 auto;
}
.info-div-text-container{
    display:flex;
    justify-content: space-around;
    height:100%;
}
.info-columns{
    text-align: left;
}
.info-column1{}
.info-column2{}
.card-area{
    height: 80%;
    width: 66.69%;
    background-color: rgba(112, 128, 144, 0.432);
}
.vertical-align{
    vertical-align: middle;
}
.rounded-corners{
    border-radius: 15px;
}

/*image slider css code*/
/* .container{
    width: 100%;
    margin: auto;
}
.slider .image:not(:first-child){
    display:none;
}
.slider .image:first-child{
    background: url("./assets/images/BGs/Arches.jpg") no-repeat center center;
    background-size:cover;
    height: 375px;
}
.slider .image:nth-child(2){
    background: url("./assets/images/BGs/CaliforniaCoast.jpg") no-repeat center center;
    background-size:cover;
    height: 375px;
}
.slider .image:nth-child(3){
    background: url("./assets/images/BGs/Denali.jpg") no-repeat center center;
    background-size:cover;
    height: 375px;
}
.slider .image:nth-child(4){
    background: url("./assets/images/BGs/GrandCanyon.jpg") no-repeat center center;
    background-size:cover;
    height: 375px;
}
.slider .image:nth-child(5){
    background: url("./assets/images/BGs/GreatSmokyMountains.jpg") no-repeat center center;
    background-size:cover;
    height: 375px;
}
.slider .image:nth-child(6){
    background: url("./assets/images/BGs/Rockies.jpg") no-repeat center center;
    background-size:cover;
    height: 375px;
}
.slider .image:nth-child(7){
    background: url("./assets/images/BGs/PurpleMountains.jpg") no-repeat center center;
    background-size:cover;
    height: 375px;
}
.slider .image:nth-child(8){
    background: url("./assets/images/BGs/VolcanoesNationalPark.jpg") no-repeat center center;
    background-size:cover;
    height: 375px;
}
.slider .image:nth-child(9){
    background: url("./assets/images/BGs/Yellowstone.jpg") no-repeat center center;
    background-size:cover;
    height: 375px;
}
.slider .image:nth-child(10){
    background: url("./assets/images/BGs/Yosemite.jpg") no-repeat center center;
    background-size:cover;
    height: 375px;
}
*/

